--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -1,3 +1,22 @@
+# Exceptions to above rules.
+!default.mode1v3
+!default.mode2v3
+!default.pbxuser
+!default.perspectivev3
+
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+migrate_working_dir/
+scripts
+.env
 **/dgph
 *.mode1v3
 *.mode2v3
@@ -15,6 +34,36 @@ Icon?
 profile
 xcuserdata
 **/.generated/
+
+ServiceDefinitions.json
+Runner/GeneratedPluginRegistrant.*
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+.vscode/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+*.g.dart
+*.freezed.dart
+*.mocks.dart
+/coverage
+.fvm/flutter_sdk
+scripts/fvm/
 Flutter/App.framework
 Flutter/Flutter.framework
 Flutter/Flutter.podspec
@@ -24,11 +73,25 @@ Flutter/app.flx
 Flutter/app.zip
 Flutter/flutter_assets/
 Flutter/flutter_export_environment.sh
-ServiceDefinitions.json
-Runner/GeneratedPluginRegistrant.*
 
-# Exceptions to above rules.
-!default.mode1v3
-!default.mode2v3
-!default.pbxuser
-!default.perspectivev3
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
+/android/app/google-services.json
+android/certificates/*
+android/build
+!/android/certificates/
+android/fastlane/report.xml
+
+# iOS related
+/ios/Runner.xcodeproj/project.pbxproj
+/ios/Podfile.lock
+/ios/Runner/GoogleService-Info.plist
+**/ios/Flutter/.last_build_id
