--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,34 +28,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-   
-   
-   
-   
-
-   
-   
-
-   
-   
-
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
+  assets:
+    - .env
